src/index.css
/* ... */
@keyframes loadbar-html {
  0% {
    width: 0%;
  }

  100% {
    width: 90%;
  }
}

@-webkit-keyframes loadbar-html {
  0% {
    width: 0%;
  }

  100% {
    width: 90%;
  }
}
@keyframes loadbar-js {
  0% {
    width: 0%;
  }

  100% {
    width: 94%;
  }
}

@-webkit-keyframes loadbar-js {
  0% {
    width: 0%;
  }

  100% {
    width: 94%;
  }
}
@keyframes loadbar-react {
  0% {
    width: 0%;
  }

  100% {
    width: 98%;
  }
}

@-webkit-keyframes loadbar-react {
  0% {
    width: 0%;
  }

  100% {
    width: 98%;
  }
}

@keyframes loadbar-node {
  0% {
    width: 0%;
  }

  100% {
    width: 90%;
  }
}

@-webkit-keyframes loadbar-node {
  0% {
    width: 0%;
  }

  100% {
    width: 90%;
  }
}
@keyframes loadbar-sql {
  0% {
    width: 0%;
  }

  100% {
    width: 98%;
  }
}

@-webkit-keyframes loadbar-sql {
  0% {
    width: 0%;
  }

  100% {
    width: 98%;
  }
}
@keyframes loadbar-adobe {
  0% {
    width: 0%;
  }

  100% {
    width: 98%;
  }
}

@-webkit-keyframes loadbar-adobe {
  0% {
    width: 0%;
  }

  100% {
    width: 98%;
  }
}

#skill-section {
  position: relative;
  background-color: #232b35;
  z-index: 1;
}
.skill-relative {
  padding: 0 5%;
  position: relative;
  height: 45vh;
  /* overflow: hidden; */
}
.skill-container {
  padding: 5% 0;
  color: var(--teal);
  position: absolute;
  top: -15%;
  left: 0;
  transform: translateX(10%);
  width: 85%;
}
.skill-container-left {
  background: var(--dark-night-black);
  padding: 0.6em;
  text-align: center;
  border-radius: 12px 12px 0 0;
}
.skill-container-left h3 {
  font-size: 2.2rem;
  font-weight: 500;
  letter-spacing: 0.4em;
}

.skill-container-right {
  box-shadow: 6px 5px 6px #e3e3e3;
  font-size: 1rem;
  background: var(--white-gray);

  height: auto;
  padding: 1.5em;
  border-radius: 0 0 12px 12px;
}
.skill-label {
  justify-content: space-between;
}
.skill-label h3 {
  font-weight: 500;
  letter-spacing: 0.15em;
}

.skill-item {
  margin: 1.3em 0;
}
.skill-bar {
  margin: 0.2em 0;
  background: var(--opactity-teal);
  width: 100%;
  height: 20px;
  box-shadow: 2px 5px 4px #e3e3e3;
}
.skill-bar::before {
  height: 20px;
  display: block;
  content: "";
}
.html-skill-bar::before {
  width: 90%;
  background: var(--teal);
  animation: loadbar-html 3s;
  -webkit-animation: loadbar-html 3s;
  animation-iteration-count: infinite;
}

.js-skill-bar::before {
  background: var(--teal);
  width: 94%;
  animation: loadbar-js 3s;
  -webkit-animation: loadbar-js 3s;
  animation-iteration-count: infinite;
}
.react-skill-bar::before {
  background: var(--teal);
  width: 98%;
  animation: loadbar-react 3s;
  -webkit-animation: loadbar-react 3s;
  animation-iteration-count: infinite;
}
.node-skill-bar::before {
  background: var(--teal);
  width: 90%;
  animation: loadbar-node 3s;
  -webkit-animation: loadbar-node 3s;
  animation-iteration-count: infinite;
}

.sql-skill-bar::before {
  background: var(--teal);
  width: 98%;
  animation: loadbar-sql 3s;
  -webkit-animation: loadbar-sql 3s;
  animation-iteration-count: infinite;
}
.adobe-skill-bar::before {
  background: var(--teal);
  animation: loadbar-adobe 3s;
  -webkit-animation: loadbar-adobe 3s;
  animation-iteration-count: infinite;
  width: 98%;
}

.skill-title {
  justify-content: space-between;
}

/* PROJECTS SECTION */
/* PROJECTS SECTION */
.card-container .card .icon {
  position: absolute;

  top: 0;

  left: 0;

  width: 100%;

  height: 100%;

  background-size: cover;
  background-position: center center;
}
.card-container .card .icon {
  position: absolute;

  top: 0;

  left: 0;

  width: 100%;

  height: 100%;

  background-size: cover;
  background-position: center center;
}
.pautakards {
  background-image: url(../src/assets/images/pautakards.png);
}
.todo {
  background-image: url(../src/assets/images/todo.png);
}
.resto {
  background-image: url(../src/assets/images/restoapp.png);
}
.hotel {
  background-image: url(../src/assets/images/casa-caballero.png);
}

.card-container .card .slide {
  width: 300px;

  height: 200px;

  transition: 0.5s;
}

.card-container .card .slide.slide1 {
  position: relative;

  display: flex;

  justify-content: center;

  align-items: center;

  z-index: 1;

  transition: 0.7s;

  transform: translateY(100px);
}

.card-container .card:hover .slide.slide1 {
  transform: translateY(0px);
}

.card-container .card .slide.slide2 {
  position: relative;

  display: flex;

  justify-content: center;

  align-items: center;

  padding: 20px;

  box-sizing: border-box;

  transition: 0.8s;

  transform: translateY(-100px);

  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
}

.card-container .card:hover .slide.slide2 {
  transform: translateY(0);
}

.card-container .card .slide.slide2 .content p {
  margin: 0;
  margin-bottom: 1.5em;

  padding: 0;

  text-align: center;

  color: var(--darkish-blue);
  font-weight: 200;
  font-size: 1.6rem;
}

.card-container .card .slide.slide2 .content h3 {
  margin: 0 0 10px 0;

  padding: 0;

  text-align: center;

  color: var(--teal);
  font-size: 2.5rem;
}
#project {
  background: var(--white-gray);
  padding: 5em;
  font-weight: 400;
  font-weight: 1.8rem;
}
.project-container-main {
  max-width: 1280px;
  padding: 3em 0;
  margin: 0 auto;
  overflow: hidden;
}
.project-header {
  margin: 2em 0;
}
.project-header i {
  font-size: 1.8rem;
  color: var(--teal);
}
.project-header h1 {
  font-size: 3.2rem;
  margin-bottom: 0.2em;
  text-align: center;
  color: var(--teal);
}
.project-header p {
  font-size: 1.4rem;
  text-align: center;
  color: var(--opactity-teal);
  margin-bottom: 0.5em;
}
.project-container-wrapper {
  flex-direction: column;
  gap: 20px;
}
.project-container {
  border-radius: 5px;
  background: var(--dark-night-black);
  flex-direction: column;
  box-shadow: 2px 12px 8px #e3e3e3;
}
.project-image img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.project-info {
  padding: 1.5em;
}
/* ... */

